log.txt
clang -O2 -g -Wall -Werror -target bpf -nostdinc -isystem /usr/include -isystem /usr/lib/llvm-14/lib/clang/14.0.0/../../include -isystem /usr/lib/llvm-14/lib/clang/14.0.0/../../../lib/clang/*/include  -Iinclude -I. -I/usr/src/linux-headers-5.15.0-142-generic/tools/lib/bpf/include -c bpf/_llseek_monitor.bpf.c -o _llseek_monitor.bpf.o
In file included from bpf/_llseek_monitor.bpf.c:9:
include/common_event.h:991:5: error: unknown type name '__kernel_socklen_t'
    __kernel_socklen_t addrlen;
    ^
include/common_event.h:1336:20: error: field has incomplete type 'struct timeval'
    struct timeval times2;
                   ^
include/common_event.h:1336:12: note: forward declaration of 'struct timeval'
    struct timeval times2;
           ^
include/common_event.h:2317:27: error: field has incomplete type 'enum __ptrace_request'
    enum __ptrace_request request;
                          ^
include/common_event.h:2317:10: note: forward declaration of 'enum __ptrace_request'
    enum __ptrace_request request;
         ^
include/common_event.h:2709:5: error: unknown type name '__kernel_socklen_t'
    __kernel_socklen_t addrlen;
    ^
include/common_event.h:2877:5: error: unknown type name '__kernel_socklen_t'
    __kernel_socklen_t optlen;
    ^
include/common_event.h:2958:5: error: unknown type name 'sighandler_t'; did you mean '__sighandler_t'?
    sighandler_t handler;
    ^~~~~~~~~~~~
    __sighandler_t
include/vmlinux.h:2557:23: note: '__sighandler_t' declared here
typedef __signalfn_t *__sighandler_t;
                      ^
In file included from bpf/_llseek_monitor.bpf.c:9:
include/common_event.h:3299:21: error: field has incomplete type 'struct timespec'
    struct timespec times2;
                    ^
include/common_event.h:3299:12: note: forward declaration of 'struct timespec'
    struct timespec times2;
           ^
include/common_event.h:3306:20: error: field has incomplete type 'struct timeval'
    struct timeval times2;
                   ^
include/common_event.h:1336:12: note: forward declaration of 'struct timeval'
    struct timeval times2;
           ^
include/common_event.h:3348:5: error: unknown type name 'idtype_t'
    idtype_t idtype;
    ^
9 errors generated.
make: *** [Makefile:20: _llseek_monitor.bpf.o] Error 1
shkch@homesever:~/2025-1/autoeBPF$ ^C
shkch@homesever:~/2025-1/autoeBPF$
